--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ ul{
 }
 #navbar{
 	height: 100px;
+	background-color: #EFF1F5;
 }
 #navbar .logo img{
 	height: 60px;
@@ -34,6 +35,11 @@ ul{
 	align-items: center;
 	height: 100%;
 }
+.contenedor{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
 #navbar ul{
 	display: flex;
 }
@@ -43,11 +49,7 @@ ul{
 #presentacion{
     padding: 80px 0;
 }
-.contenedor{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 30px;
-}
+
 .presentacion-flex{
     display: flex;
 }
@@ -96,7 +98,7 @@ ul{
 	grid-column: 4/6;
 	grid-row: 1;
 }
-/* Sobre Nosotros */
+/* Sobre Nosotros e Introduccion */
 #SN{
 	padding: 80px 0;
 }
@@ -109,7 +111,7 @@ ul{
 #SN p{
 	width: 60%;
 }
-/* Services */
+/* Contacto */
 #contacto{
 	padding: 80px 0;
 }
@@ -135,9 +137,10 @@ ul{
 #Esports{
 	padding: 80px;
 }
-footer{
-	display: none;
+.card{
+	padding: 10px;
 }
+
 
 
 
